--- a/index.html
+++ b/index.html
@@ -1,26 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Chart</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://use.typekit.net/jom7xhe.css">
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
-    <script src="https://d3js.org/textures.v1.min.js"></script>
-    <script src="https://unpkg.com/textures@1.2.0/dist/textures.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js"></script>
-    <script defer src="chart.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Food Chart</title>
+  <!-- <link rel="stylesheet" href="style.css"> -->
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js"></script>
+  <script defer src="chart.js"></script>
+  <style>
+    /* Make the parent container a flex container to align charts side by side */
+    #chart {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      gap: 10px;
+    }
+    /* Each chart container remains relatively positioned */
+    .chart-container {
+      position: relative;
+    }
+    /* Tooltip styles remain unchanged */
+    .tooltip, .tooltipCO {
+      opacity: 0;
+      position: absolute;
+      top: -10px;
+      left: 0;
+      padding: 0.4em 0.8em;
+      background: #fff;
+      text-align: center;
+      line-height: 1.2em;
+      font-size: 0.8em;
+      border: 1px solid #ddd;
+      z-index: 10;
+      transition: all 0.1s ease-out;
+      pointer-events: none;
+    }
+    .tooltip:before, .tooltipCO:before {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      width: 10px;
+      height: 10px;
+      background: white;
+      border: 1px solid #ddd;
+      border-top-color: transparent;
+      border-left-color: transparent;
+      transform: translate(-50%, 50%) rotate(45deg);
+      transform-origin: center center;
+      z-index: 10;
+    }
+  </style>
 </head>
 <body>
-    
-
-   
-
-    <div id="chart"></div>
+  <div id="chart">
+    <!-- Temperature chart container -->
+    <div id="temp-container" class="chart-container">
+      <!-- Place the tooltip inside its container -->
+      <div id="tooltipTemp" class="tooltip">
+        <div class="tooltip-temp">
+          <span id="temp-date"></span>
+        </div>
+        <div class="tooltip-value">
+          Temperature Variation: <span id="temperature"></span>
+        </div>
+      </div>
+    </div>
+    <!-- CO2 chart container -->
+    <div id="co2-container" class="chart-container">
+      <!-- Place the CO₂ tooltip inside its container -->
+      <div id="tooltipCO2" class="tooltipCO">
+        <div class="tooltip-co2">
+          <span id="co2-date"></span>
+        </div>
+        <div class="tooltip-value">
+          Carbon Dioxide Variation: <span id="co2"></span>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
