Updating the axis grid, padding and interaction effect

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
       transform-origin: center center;
       z-index: 10;
     }
+
+    .tick line, .domain {
+      stroke: #E5E5DE;
+      stroke-width: 0.5px;
+    }
+
   </style>
 </head>
 <body>
